# trio-monitor

./: .appveyor.yml  .coveragerc  .pre-commit-config.yaml  MANIFEST.in  README.rst  noxfile.py  pyproject.toml  setup.py  test-requirements.txt
.github/workflows/: ci.yml
ci/: travis.sh
docs/: Makefile  make.bat
docs/source/: conf.py  history.rst  index.rst
examples/: monitor.sh  monitored.py
src/trio_monitor/: __init__.py  monitor.py
src/trio_monitor/_tests/: test_monitor.py
trio_monitor/: __init__.py  __main__.py  monitor.py
trio_monitor/_tests/: test_example.py  test_monitor.py
